--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -606,6 +606,27 @@
 	    	border-right: 1px solid #CCC !important;
 		}
 	}
+
+	/*HW20-201 Mobile Become media partner - Media partners are not displayed*/
+	#block-views-partners-block-2{
+		padding-left: 4em;
+		h2{
+			padding-left: 0;
+    		margin-left: 0;
+		}
+
+		.views-row.hidden-xs{
+			display: block !important;
+		    float: left;
+		    width: 35%; 
+		}
+
+		.view-partners div .views-field {
+	    	border-top: none !important;
+	    	border-left: 1px solid #CCC !important;
+	    	border-right: 1px solid #CCC !important;
+		}
+	}
 	
 
 	.page-events{
