--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-480.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-480.less
@@ -65,6 +65,11 @@
 	    width: 47%;
 	}
 
+	/*HW20-201 Mobile Become media partner - Media partners are not displayed*/
+	#block-views-partners-block-2 .views-row.hidden-xs {
+	    width: 47%;
+	}
+
 	body.press-room{
 		h2.block-title{
 			font-size: 2.15em!important;
