add less to relasease 2 styles

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-style.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-style.less
@@ -1,6 +1,6 @@
-// Fixing responsive
-
 @import 'hwc20.less';
+
+@import 'hwc20-release_2.less';
 
 @import 'hwc20-responsive-min-1200.less';
 @import 'hwc20-responsive-max-992.less';
