--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -325,7 +325,7 @@
 		}
 	}
 
-	.box-news div.news-item:nth-child(2) .news-item-content {
+	.box-news div.news-item:nth-child(2) .news-item-content{
 	    margin-left: 0em;
 	    margin-right: 0;
 	    margin-top: 1em;
@@ -795,7 +795,17 @@
 			}
 		}
 	}
-	
+
+	.table-responsive{
+		border: 0;
+		.pagerer-left{
+			display: none;
+		}
+
+		.pagerer-center{
+			display: block;
+		}
+	}
 
 }
 
