--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -37,6 +37,12 @@
 		margin-top: 0;
 	}
 
+	.page-publications .pager-total, .page-tools-and-publications .pager-total{
+		top: -1em;
+    	right: 5em;
+	}
+
+
 }
 
 
