--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -2307,6 +2307,13 @@ div.publications-detail-right-column > a.download{
     }
 }
 
+.publications-row.last{
+    margin-bottom: 0em;
+    &:after{
+		background: none;
+    }
+}
+
 .sidebars_first{
   label{
     color: #003399 !important;
