--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -4686,6 +4686,9 @@ body{
     text-align: left;
     padding-top: 0px;
     margin-top: -2em;
+    input[type=checkbox]{
+    	display: none;
+    }
 }
 
 .add-to-my-calendar label{
