--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -1571,6 +1571,17 @@ aside.col-md-3{
   }
 }
 
+#block-menu-block-5{
+	ul{
+    a{
+      &:before{
+		content: none;
+	    }
+    }
+  }
+}
+
+
 .main-container div.contextual-links-wrapper {
   left: 5px;
   right: auto;
