--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -165,6 +165,13 @@ body .more-link{
 	}
 }
 
+.back-to-events, .back-links{
+	span {
+	    margin-left: 0.5em;
+	    font-weight: bold;
+	}
+}
+
 .main-container h2{
 	color: #003399;
 }
@@ -4774,12 +4781,6 @@ body{
 		clear: both;
 		font-style: normal;
 		font-weight: 500;
-	}
-
-
-	.back-to-events span {
-	    margin-left: 0.5em;
-	    font-weight: bold;
 	}
 
 	.content-left-column{
