--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -1398,6 +1398,13 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
   margin-top: 0;
   height: auto;
   padding-bottom: 15px;
+  a{
+  	color:#FFF;
+  	&:hover{
+  		text-decoration: underline;
+  		color:#FFF;
+  	}
+  }
 }
 
 .footer-section{
