--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -8501,6 +8501,7 @@ input#edit-field-image-und-0-upload::before {
 					height: 600px;
 					>div{
 						width: 100% !important;
+						padding: 0;
 						.napo-film-title{
 						    margin: 0 auto;
 						    width: 100%;
@@ -8538,6 +8539,7 @@ input#edit-field-image-und-0-upload::before {
 						    background-color: black;
 						    //background-color: inherit !important;
 						}
+
 						.hwc-share-widget{
 							border-top: none;
 							border-bottom: none;
@@ -8547,6 +8549,7 @@ input#edit-field-image-und-0-upload::before {
 						    margin: 0 auto;
 						    width: 100%;
 							background-color: @color2;
+							float: none;
 							ul{
 								text-align: right;
 								padding-right: 10px;
@@ -8676,8 +8679,7 @@ input#edit-field-image-und-0-upload::before {
 		.field-type-text-with-summary{
 			text-align: center;
 			
-			.more-link{
-				background-color: #003399 !important;
+			.more-link{			
 				padding: 8px 20px 8px 20px;
 				margin-top: 15px;
 				display: inline-block;
