Fix footer margins

--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -11098,7 +11098,7 @@ input#edit-field-image-und-0-upload::before {
 		clear: both;
 		margin-top: 20px;
 		overflow: hidden;
-		margin-bottom: 50px;
+		margin-bottom: 0;
 		.key-next-prev-buttons{
 			overflow: hidden;
 			.prev-button,
