--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -1224,13 +1224,8 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
   padding: 1em 0;
   margin: 0;
   list-style: none;
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-flow: row wrap;
-  justify-content: space-around;
+  display: block;
+  width: 100%;
 }
 .view-partners div {
   flex-grow: 1;
@@ -1254,7 +1249,7 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
   clear: both;
 }
 .footer {
-  margin-top: 0;
+  margin-top: 3em;
   height: auto;
   padding-bottom: 15px;
 }
@@ -1264,6 +1259,23 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
 .footer a:hover {
   text-decoration: underline;
   color: #FFF;
+}
+.footer.fix-margin {
+  margin-top: 0;
+}
+.node-type-campaign-16 .footer.fix-margin,
+.node-type-campaign-18 .footer.fix-margin {
+  margin-top: 3em;
+}
+.page-tools-and-publications .grey-background,
+.page-tools-and-publications-campaign-materials .grey-background,
+.page-media-centre-news .grey-background {
+  padding-bottom: 1em;
+}
+.page-tools-and-publications .footer,
+.page-tools-and-publications-campaign-materials .footer,
+.page-media-centre-news .footer {
+  margin-top: 0;
 }
 .footer-section {
   font-size: 12.5px;
@@ -1496,7 +1508,7 @@ aside.col-md-3 .region.region-sidebar-first.well {
   border-top: 1px solid black;
   margin-top: 2em;
   padding-top: 1.3em;
-  padding-bottom: 1em;
+  padding-bottom: 0;
 }
 .previous-next a {
   align-self: center;
@@ -1513,7 +1525,7 @@ aside.col-md-3 .region.region-sidebar-first.well {
   border-top: 1px solid black;
   margin-top: 2em;
   padding-top: 1.3em;
-  padding-bottom: 1em;
+  padding-bottom: 0;
 }
 .previous-next.two-arrows a {
   align-self: center;
@@ -2036,7 +2048,6 @@ div.publications-detail-right-column > a.download {
   position: relative;
   width: 100%;
   float: left;
-  padding-bottom: 3em;
 }
 .content-fluid.green-background {
   background: #daea96;
@@ -2076,6 +2087,9 @@ div.publications-detail-right-column > a.download {
   position: absolute;
   bottom: -36px;
   left: 5%;
+}
+.node-type-publication .publications-row {
+  margin-bottom: 0;
 }
 .publications-row.last {
   margin-bottom: 0em;
@@ -2331,6 +2345,7 @@ span.pages {
 .publication-detail .publications-row {
   border-bottom: 0;
   margin-top: 2em;
+  padding: 0;
 }
 .publication-detail .publications-row .download {
   margin-top: 2em;
@@ -2486,6 +2501,7 @@ span.pages {
 .page-search .main-container #block-system-main .view .views-row .field-name-field-summary {
   font-weight: normal;
   margin-top: 0;
+  padding-bottom: 2em;
 }
 .page-media-centre-news .main-container #block-system-main .view .views-row .field-name-body,
 .page-search .main-container #block-system-main .view .views-row .field-name-body {
@@ -2880,7 +2896,6 @@ div.workbench-info-block {
 }
 .view-id-partners_list {
   float: left;
-  padding-bottom: 2em;
   font-size: 1em;
   font-style: normal;
   font-weight: normal;
@@ -3093,9 +3108,6 @@ div.workbench-info-block {
 .panels-flexible-region .hwc-share-widget ul .share-this-article {
   float: left;
   padding-top: 0;
-}
-.profile-2-cols-container-3 {
-  padding-bottom: 2em;
 }
 .profile-2-cols-container-3 .profile-col-left-3 h2.pane-title {
   background: url(../images/mpp-create-news.png) 50% 4% no-repeat;
@@ -4423,7 +4435,6 @@ ul[data-sa-theme="basic-green"].ui-menu {
   width: 288px;
   float: right;
   height: 100%;
-  margin-bottom: 2em;
 }
 #block-osha-newsletter-osha-newsletter-events-subscribe #edit-subscribe-details {
   text-align: left !important;
@@ -4522,9 +4533,6 @@ ul[data-sa-theme="basic-green"].ui-menu {
   padding-bottom: 0;
 }
 /* Press room */
-body.press-room aside.col-md-8.col-xs-12 .hwc-share-widget {
-  padding-bottom: 2em;
-}
 body.press-room .field-name-body {
   width: 73%;
   padding-left: 2.2em;
@@ -5021,17 +5029,17 @@ body.european-week #block-views-news-european-week ul > li:nth-child(2) {
   text-indent: -99999px;
 }
 /* Pagination for right columns views, display responsive pagination */
-.panels-flexible-row .pagerer-center {
+.view-partner-content .pagerer-center {
   display: block;
 }
-.panels-flexible-row .pagerer-center ul.pager {
+.view-partner-content .pagerer-center ul.pager {
   display: flex;
   justify-content: center;
 }
-.panels-flexible-row .pagerer-center ul.pager li {
+.view-partner-content .pagerer-center ul.pager li {
   float: left;
 }
-.panels-flexible-row .pagerer-left {
+.view-partner-content .pagerer-left {
   display: none;
 }
 @media (max-width: 1200px) {
