--- a/docroot/sites/all/themes/hwc_frontend/css/style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/style.css
@@ -20055,7 +20055,7 @@ input#edit-field-image-und-0-upload::before {
   clear: both;
   margin-top: 20px;
   overflow: hidden;
-  margin-bottom: 50px;
+  margin-bottom: 0;
 }
 .toolkit-page #block-hwc-toolkit-toolkit-nav .key-next-prev-buttons,
 .toolkit-page .pane-hwc-toolkit-toolkit-nav .key-next-prev-buttons {
