--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -5697,3 +5697,28 @@ body.european-week{
 		display: none;
 	}
 }
+
+/* Campaing toolkit */
+
+.toolkit-page{
+	.field-name-title-field{
+		h2{
+			font-style: normal;
+		    color: #749b00;
+		    font-weight: 600;
+		    margin-bottom: 15px;
+		    font-size: 2em;
+		    text-align: left;
+		    margin-top: 10px;
+		    margin-bottom: 5px;
+		    a{
+		   		font-size: 2rem;
+		    }
+		}
+	}
+
+	.views-row img{
+		border: 0;
+		border-radius: 0;
+	}
+}
