HW20-208 - HWC20 Development of the HWC20 CampaignToolkit

--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -5054,10 +5054,18 @@ body.european-week #block-views-news-european-week ul > li:nth-child(2) {
   font-size: 2em;
   text-align: left;
   margin-top: 10px;
-  margin-bottom: 5px;
 }
 .toolkit-page .field-name-title-field h2 a {
   font-size: 2rem;
+}
+.toolkit-page h2.toolkit-h2 {
+  font-style: normal;
+  color: #749b00;
+  font-weight: 600;
+  margin-bottom: 15px;
+  font-size: 2em;
+  text-align: left;
+  margin-top: 10px;
 }
 .toolkit-page .views-row img {
   border: 0;
