--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -5710,11 +5710,20 @@ body.european-week{
 		    font-size: 2em;
 		    text-align: left;
 		    margin-top: 10px;
-		    margin-bottom: 5px;
 		    a{
 		   		font-size: 2rem;
 		    }
 		}
+	}
+
+	h2.toolkit-h2{
+		font-style: normal;
+	    color: #749b00;
+	    font-weight: 600;
+	    margin-bottom: 15px;
+	    font-size: 2em;
+	    text-align: left;
+	    margin-top: 10px;
 	}
 
 	.views-row img{
