--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -1909,6 +1909,7 @@ aside.col-md-3{
     	.form-group{
 			margin-bottom: 0;
 			padding-bottom: 0;
+			display: block;
     	}
     	.form-item-language{
     		padding-bottom: 0;
