--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -354,7 +354,7 @@
 		margin-top: 1em;
 	}
 
-	.page-publications{
+	.page-publications, .page-tools-and-publications-campaign-materials{
 
 		.content{
 			display: block;
