--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -5145,6 +5145,10 @@ ul[data-sa-theme="basic-green"].ui-menu{
 	.panels-flexible-row-last{
 		background: #efefef;
 		padding-bottom: 3em;
+		h2{
+			padding-top: 0.5em;
+    		padding-bottom: 0.3em;
+		}
 	}
 	.panel{
 		background: transparent;
